<resources>
    <string name="app_name">Assignment Compilation</string>
    <string name="roll_label">Roll</string>
    <string name="ass_2">Assignment 2: Fragments</string>
    <string name="ass_3">Assignment 3: Font Chooser</string>
    <string name="approved">Approved</string>
    <string name="not_approved">Not Approved</string>
    <string name="approve_button">Press Here to approve the assignment</string>
    <string name="fail_button">Press Here to reject the assignment</string>

    <string name="font_title">Assignment 3: Font Chooser</string>
    <string name="font_description">Press the buttons below to change aspects of your font!</string>
    <string name="font_tye_face">Press these buttons to change TypeFace!</string>
    <string name="font_style">Press these buttons to change Style!</string>
    <string name="font_size">Press these buttons to change Size!</string>
    <string name="font_color">Press these buttons to change Color!</string>
    <string name="font_button_default">Default</string>
    <string name="font_button_monospace">Monospace</string>
    <string name="font_button_serif">Serif</string>
    <string name="font_button_normal">Normal</string>
    <string name="font_button_bold">Bold</string>
    <string name="font_button_italic">Italic</string>
    <string name="font_button_small">Small</string>
    <string name="font_button_medium">Medium</string>
    <string name="font_button_large">Large</string>
    <string name="font_button_black">Black</string>
    <string name="font_button_green">Green</string>
    <string name="font_button_red">Red</string>

    <string name="app_description_text">This app is a collage of class assignments packaged into separate fragments.  Select an assignment to go navigate to its fragment.  Select the adjacent \'not approved\' button to change the approval status of each assignment.  Also, try pressing the buttons below to complete the initial in class exersice!</string>
    <string name="help_hide_button">Hide Text</string>
    <string name="help_color_button">Change Color</string>

    <string name="intent_title">Assignment 4: Intents and User Experience</string>
    <string name="intent_description">Press the buttons below to launch the companion app and change the fonts and texts below!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intent_default_message">Press here to initiate the companion app in order to change this font!</string>
    <string name="style_one_text">This style is Bold, and has the "un-approved" color.  Press again to change the style to a different one!</string>
    <string name="style_two_text">This style is Italic, and has the "approved" color.  Press again to change the style to a different one!</string>
    <string name="style_three_text">This style is Bold Italic, and has the "accent" color.  Press again to change the style to a different one!</string>

</resources>
