<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/intent_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intent_title"
            android:textSize="@dimen/header_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/intent_fragment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/intent_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intent_fragment_title" />

    <TextView
        android:id="@+id/sample_one_view"
        android:layout_width="@dimen/default_option_width"
        android:layout_height="@dimen/three_button_fit"
        android:layout_marginTop="24dp"
        android:background="@color/second_button"
        android:text="@string/intent_default_message"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intent_fragment_description" />

    <TextView
        android:id="@+id/sample_two_view"
        android:layout_width="@dimen/default_option_width"
        android:layout_height="@dimen/three_button_fit"
        android:layout_marginTop="24dp"
        android:background="@color/second_button"
        android:text="@string/intent_default_message"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sample_one_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
